--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     class="image-compare-widget" 
     data-before="28abr.png" 
     data-after="29abr.png"
+    data-start="30"
     style="width:1920px; height:1080px;"
   ></div>
 
